feat: added avatar

--- a/index.html
+++ b/index.html
@@ -1,42 +1,51 @@
 <!DOCTYPE html>
 <html lang="en-US">
-  <head>
-<title>Alexandr Slapik | rsschool-cv</title>
-<link rel="canonical" href="https://alex-ino.github.io/rsschool-cv/cv.html" />
-<meta property="og:url" content="https://alex-ino.github.io/rsschool-cv/cv.html" />
-<meta property="og:site_name" content="rsschool-cv" />
-  </head>
-  <body>
-    <div class="container-lg px-3 my-5 markdown-body">
-      
-      <h1><a href="https://alex-ino.github.io/rsschool-cv/">rsschool-cv</a></h1>
-      
 
-      <h1 id="alexandr-slapik">Alexandr Slapik</h1>
-<h2 id="junior-javascript-developer--code-enthusiast">Junior Javascript Developer &amp; Code Enthusiast</h2>
+<head>
+  <title>Alexandr Slapik | rsschool-cv</title>
+  <link rel="canonical" href="https://alex-ino.github.io/rsschool-cv/cv.html" />
+  <meta property="og:url" content="https://alex-ino.github.io/rsschool-cv/cv.html" />
+  <meta property="og:site_name" content="rsschool-cv" />
+  <style>
+    .container-lg {
+      width: 800px;
+      margin: auto;
+    }
+  </style>
+</head>
 
-<blockquote>
-  <p><a href="mailto:slapiks@gmail.com">slapiks@gmail.com</a></p>
-</blockquote>
+<body>
+  <div class="container-lg px-3 my-5 markdown-body">
 
-<blockquote>
-  <h2 id="375-29-281-23-87">+375 (29) 281-23-87</h2>
-</blockquote>
+    <h1><a href="https://alex-ino.github.io/rsschool-cv/">rsschool-cv</a></h1>
 
-<h3 id="technical-skills">Technical skills</h3>
+    <img src="avatar.jpg">
+    <h1 id="alexandr-slapik">Alexandr Slapik</h1>
+    <h2 id="junior-javascript-developer--code-enthusiast">Junior Javascript Developer &amp; Code Enthusiast</h2>
 
-<ol>
-  <li>C (Novice)</li>
-  <li>Javascript (Novice)</li>
-  <li>Git (Novice)</li>
-  <li>HTML/CSS (Novice)</li>
-  <li>Arduino (Intermediate)</li>
-</ol>
+    <blockquote>
+      <p><a href="mailto:slapiks@gmail.com">slapiks@gmail.com</a></p>
+    </blockquote>
 
-<h3 id="education">Education</h3>
+    <blockquote>
+      <h2 id="375-29-281-23-87">+375 (29) 281-23-87</h2>
+    </blockquote>
 
-<p><strong>Specialist (Electronics engineer)</strong> <strong>2011 to 2015</strong>
-Yanka Kupala State University of Grodno Physics and Technical Support - Industrial electronics</p>
-    </div>
-  </body>
+    <h3 id="technical-skills">Technical skills</h3>
+
+    <ol>
+      <li>C (Novice)</li>
+      <li>Javascript (Novice)</li>
+      <li>Git (Novice)</li>
+      <li>HTML/CSS (Novice)</li>
+      <li>Arduino (Intermediate)</li>
+    </ol>
+
+    <h3 id="education">Education</h3>
+
+    <p><strong>Specialist (Electronics engineer)</strong> <strong>2011 to 2015</strong>
+      Yanka Kupala State University of Grodno Physics and Technical Support - Industrial electronics</p>
+  </div>
+</body>
+
 </html>
